--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Succulent</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="js/main.js">
-    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <link rel="Shortcut Icon" type="image/x-icon" href="images/logo.png" />
 </head>
 <body>
@@ -24,7 +25,25 @@
                <li>〡</li>
              </ul>
         </div>
-        <div class="pic">
+        <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ul class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1" ></li>
+                    <li data-target="#myCarousel" data-slide-to="2" ></li>
+                </ul>
+                <div class="carousel-inner">
+                    <div class="carousel-item active"><img src="images/cover1.jpg" alt=""></div>
+                    <div class="carousel-item"><img src="images/cover2.jpg" alt=""></div>
+                    <div class="carousel-item"><img src="images/cover3.jpg" alt=""></div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
         </div>
         <div class="area">
             <div class="title">將沙漠中的小精靈帶進你的生活</div>
